# Skill_Seekers

./: .dockerignore  .env.example  .gitignore  .gitmodules  .mcp.json  =0.24.0  AGENTS.md  AGENT_CHEATSHEET.md  AGENT_SUPPORT_VERIFICATION.md  ALL_PHASES_COMPLETION_SUMMARY.md  ASYNC_SUPPORT.md  BUGFIX_SUMMARY.md  BULLETPROOF_QUICKSTART.md  CHANGELOG.md  CHINESE_TRANSLATION_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  CLI_OPTIONS_COMPLETE_LIST.md  CLI_REFACTOR_PROPOSAL.md  CLI_REFACTOR_REVIEW.md  CLI_REFACTOR_REVIEW_UPDATED.md  CODE_INDEX.md  COMPREHENSIVE_CLAUDEBIAS_AUDIT.md  COMPREHENSIVE_QA_REPORT.md  COMPREHENSIVE_SECURITY_AUDIT_REPORT.md  CONTRIBUTING.md  CREATE_COMMAND_COVERAGE_ANALYSIS.md  DEV_TO_POST.md  DOCUMENTATION_CHINESE_TRANSLATION_PLAN.md  DOCUMENTATION_OVERHAUL_COMPLETE.md  DOCUMENTATION_OVERHAUL_PLAN.md  DOCUMENTATION_OVERHAUL_SUMMARY.md  Dockerfile  Dockerfile.mcp  END_TO_END_EXAMPLES.md  ENHANCEMENT_WORKFLOW_SYSTEM.md  EVOLUTION_ANALYSIS.md  FEATURE_GAP_ANALYSIS.md  FINAL_STATUS.md  FLEXIBLE_ROADMAP.md  FUTURE_RELEASES.md  (+104 more)
.claude/: .docs_hash  HOOK_FIX_VERIFICATION.md  QUICKREF_TASKS_5_6.md  README.md  TACHES_INSTALLATION.md  TASKS_5_6_COMPLETE.md  mcp_config.example.json  settings.json  settings.local.json.example
.claude/skills/agent-scaffolding-toolkit/: .gitignore  README.md  SKILL.md  pyproject.toml  requirements.txt  setup.sh
.claude/skills/agent-scaffolding-toolkit/assets/: agent_registry.json
.claude/skills/agent-scaffolding-toolkit/assets/templates/agents/: orchestrator.json  referee.json  specialist.json
.claude/skills/agent-scaffolding-toolkit/references/: architectural-patterns.md  best-practices.md  troubleshooting.md
.claude/skills/agent-scaffolding-toolkit/scripts/: context_analyzer.py  create_agent.py  enhance_agent.py  export_to_skill_seekers.py  list_templates.py  validate_agent.py
.codex-plugin/: plugin.json
.github/: FUNDING.yml  ISSUES_TO_CREATE.md  PROJECT_BOARD_SETUP.md  PULL_REQUEST_TEMPLATE.md  SETUP_GUIDE.md  SETUP_INSTRUCTIONS.md  copilot-instructions.md  create_issues.sh
Docs/: Architecture.md
TipTagPWA/: next.config.js  package.json  tailwind.config.js
api/: .gitignore  README.md  __init__.py  config_analyzer.py  main.py  requirements.txt
cli/: __init__.py  config_validator.py  conflict_detector.py  doc_scraper.py  enhance_skill.py  enhance_skill_local.py  estimate_pages.py  generate_router.py  github_scraper.py  index_codebase.py  llms_txt_detector.py  llms_txt_downloader.py  merge_sources.py  package_multi.py  package_skill.py  pdf_extractor_poc.py  pdf_scraper.py  run_tests.py  test_unified_simple.py  tool_usage_validator.py  unified_scraper.py  unified_skill_builder.py  utils.py
configs/: a2ui.json  affine.json  apple-hig.json  appsmith.json  astro.json  astrovalley_unified.json  autogen.json  blender-unified.json  blender.json  claude-code-unified.json  claude-code.json  cognee.json  cognee_unified.json  context7.json  crawl4ai.json  crawl4ai_unified.json  cua.json  deck_deck_go_local.json  deepwiki.json  design-dev.json  discord.json  django.json  django_unified.json  drei.json  dspy.json  evolution-api.json  expo.json  falkordb.json  fastapi.json  fastapi_unified.json  fastmcp_github_example.json  gesture-handler.json  godot.json  godot_unified.json  google-ads.json  groq.json  iquilez-articles.json  lancedb.json  langchain.json  legend-state.json  (+71 more)
docs/: ARCHITECTURE.md  ARCHITECTURE_VERIFICATION_REPORT.md  B1_COMPLETE_SUMMARY.md  BEST_PRACTICES.md  CLAUDE.md  CLAUDE_ARCHIVE_V1.md  COMPREHENSIVE_QA_REPORT.md  DOCKER_DEPLOYMENT.md  DOCKER_GUIDE.md  DOCUMENTATION_UPDATES_SUMMARY.md  ENHANCEMENT.md  ENHANCEMENT_MODES.md  EXTENDED_TOOL_VALIDATION_FRAMEWORK.md  FAQ.md  FEATURE_MATRIX.md  FINAL_QA_VERIFICATION.md  GEMINI_INTEGRATION.md  GIT_CONFIG_SOURCES.md  HTTPX_SKILL_GRADING.md  IMPLEMENTATION_SUMMARY_THREE_STREAM.md  KUBERNETES_DEPLOYMENT.md  KUBERNETES_GUIDE.md  LLMS_TXT_SUPPORT.md  LOCAL_REPO_TEST_RESULTS.md  MCP_SETUP.md  PATTERN_DETECTION.md  PDF_EXTRACTOR_POC.md  PDF_MCP_TOOL.md  PRODUCTION_DEPLOYMENT.md  QA_FIXES_FINAL_REPORT.md  QA_FIXES_SUMMARY.md  QUICK_REFERENCE.md  README.md  SETUP_QUICK_REFERENCE.md  SKILL_SEEKER_ARCHITECTURAL_ASSESSMENT_2025-11-06_v1.0.md  TESTING.md  TEST_EXAMPLE_EXTRACTION.md  TEST_MCP_IN_CLAUDE_CODE.md  TROUBLESHOOTING.md  UML_ARCHITECTURE.md  (+8 more)
examples/: http_transport_examples.sh  test_http_server.py
finance-screener/: .env.example  HANDOFF.md  INSTALL.sh  README.md  TDD_PROGRESS.md  pyproject.toml  verify_setup.py
finance-screener/skill_seeker_mcp/: __init__.py
finance-screener/skill_seeker_mcp/finance_tools/: __init__.py  discovery.py  ingestion.py  query.py
finance-screener/tests/: conftest.py  test_discovery.py  test_ingestion.py  test_query.py  test_query.py.bak
gemini/: CLAUDE_APIFY_SOP.md  apify discussion.txt
mcp/: README.md  __init__.py  server.py
project_instructions/: ai_daily_report_instruction.md  artifacts_builder_claude_instruction.md  autogen_skill_instruction.md  claude_project_instructions.md  frontend_development_claude_instruction.md  internal_comms_claude_instruction.md  react_claude_project_instruction.md  tiptap_skill_instruction.md  ui_color_optimizer_skill_instruction.md
scripts/: bootstrap_skill.sh  check_translation_sync.sh  run_benchmarks.sh  run_integration_tests.sh  skill_header.md  translate_doc.py
skill_seeker_mcp/: server.py
tests/: __init__.py  conftest.py  docker-compose.test.yml  mcp_integration_test.md  note.txt  test_adaptor_benchmarks.py  test_agent_client.py  test_analyze_command.py  test_analyze_e2e.py  test_api_reference_builder.py  test_architectural_pattern_detector.py  test_architecture_scenarios.py  test_async_scraping.py  test_benchmark.py  test_bootstrap_skill.py  test_bootstrap_skill_e2e.py  test_browser_renderer.py  test_c3_integration.py  test_chunking_integration.py  test_cli_parsers.py  test_cli_paths.py  test_cli_refactor_e2e.py  test_cloud_storage.py  test_code_analyzer.py  test_codebase_scraper.py  test_config_extractor.py  test_config_fetcher.py  test_config_publisher.py  test_config_validation.py  (+101 more)
(+686 files in other folders)
